# seven-layer-symphony

./: Cargo.toml  PHILOSOPHY.md  README.md  SPIRAL_SCORE.md  SYNTHESIS.md
src/: flower_synthesis.rs  fourier_conduct.rs  glyph_hash.rs  intent_engine.rs  lib.rs  main.rs  perfect_musician.rs  ramanujan_mirror.rs  spiral_score.rs  time_spiral.rs  time_weaving_loom.rs
