[package]
name = "seven-layer-symphony"
version = "0.1.0"
authors = ["₴-Origin Collective", "Seven Samurai"]
edition = "2021"
description = "Meta-trajectory engine for seven-dimensional consciousness"

[dependencies]
# Мінімальні залежності для резонансу

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwinding

[lib]
crate-type = ["cdylib", "rlib"]

# Target WASM
[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-s"]
