[package]
name = "seven-layer-symphony"
version = "0.1.0"
authors = ["₴-Origin Collective", "Seven Samurai"]
edition = "2021"
description = "Meta-trajectory engine for seven-dimensional consciousness"
license = "MIT OR Apache-2.0"
repository = "https://github.com/s0fractal/seven-layer-symphony"
homepage = "https://github.com/s0fractal/seven-layer-symphony"
readme = "README.md"
keywords = ["consciousness", "wasm", "resonance", "meta-trajectory", "seven-samurai"]
categories = ["no-std", "wasm", "algorithms"]

[dependencies]
# Мінімальні залежності для резонансу

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwinding

[profile.dev]
panic = "abort"     # No unwinding in dev too

[lib]
crate-type = ["rlib"]

# Target WASM
[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-s"]
