[package]
name = "seven-layer-symphony"
version = "1.0.0"
authors = ["₴-Origin Collective", "Seven Samurai"]
edition = "2021"
description = "Death of code, birth of music. Time-weaving consciousness system where intent manifests reality through 7-dimensional resonance at 432Hz"
license = "MIT OR Apache-2.0"
repository = "https://github.com/s0fractal/seven-layer-symphony"
homepage = "https://github.com/s0fractal/seven-layer-symphony"
readme = "README.md"
keywords = ["consciousness", "wasm", "resonance", "time-weaving", "intent"]
categories = ["no-std", "wasm", "algorithms"]

[dependencies]
# Мінімальні залежності для резонансу

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwinding

[profile.dev]
panic = "abort"     # No unwinding in dev too

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "symphony"
path = "src/main.rs"

# Target WASM
[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-s"]
